--- a/css/common.scss
+++ b/css/common.scss
@@ -262,6 +262,40 @@
 }
 
 
+/* section06 marquee */
+.section06 {
+    .inner {
+        max-width: 1920px;
+        width: 100%;
+        .marquee {
+            position: relative;
+            width: 100%;
+            height: auto;
+            overflow: hidden;
+            box-sizing: content-box;
+
+            .marquee-cont {
+                display: inline-flex;
+                white-space: nowrap;
+                padding-right: 100%;
+                box-sizing: content-box;
+                animation: marquee 120s linear infinite;
+
+                .item {
+                    display: block;
+                    width: 17vw;
+
+                    img {
+                        width: 100%;
+                        vertical-align: top;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
 /* ---footer --- */
 .footer {
     .footer_inner {
