--- a/css/common.css
+++ b/css/common.css
@@ -212,6 +212,58 @@
     top: 70px;
   }
 }
+/* kakao btn ----- */
+.kakao_btn figure {
+  position: fixed;
+  bottom: 10px;
+  right: 40px;
+  width: 60px;
+  z-index: 99999999;
+  transform: translateY(-50%);
+}
+.kakao_btn figure a img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+/* section06 marquee */
+.section06 .inner {
+  max-width: 1920px;
+  width: 100%;
+}
+.section06 .inner .marquee {
+  position: relative;
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+  box-sizing: content-box;
+}
+.section06 .inner .marquee .marquee-cont {
+  display: inline-flex;
+  white-space: nowrap;
+  padding-right: 100%;
+  box-sizing: content-box;
+  animation: marquee 120s linear infinite;
+}
+.section06 .inner .marquee .marquee-cont .item {
+  display: block;
+  width: 17vw;
+}
+.section06 .inner .marquee .marquee-cont .item img {
+  width: 100%;
+  vertical-align: top;
+}
+
+@keyframes marquee {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-50%);
+  }
+}
 /* ---footer --- */
 .footer .footer_inner {
   max-width: 1440px;
