--- a/sub/css/style.css
+++ b/sub/css/style.css
@@ -1,3 +1,152 @@
 @import url("/css/reset.css");
 @import url("/css/common.css");
 @import url("/css/common.scss");
+:root {
+  --font-en: "Caviar Dreams";
+  --font-kr: "NanumSquare";
+  --font-title: "NanumMyeongjoExtraBold";
+  --color-black: #333;
+  --color-white: #fff;
+  --max-width: 1440px;
+  --responsive-width: calc(100% - 30px);
+  --titleSize--pc-big: 3.6rem;
+  --titleSize-tablet-big: 32px;
+  --titleSize-mobile-big: 28px;
+  --textSize-basic: 20px;
+  --textSize-mobile-basic: 18px;
+}
+
+.sub01_nav {
+  width: 100%;
+  height: 240px;
+  margin-top: 80px;
+}
+.sub01_nav .inner {
+  max-width: 1440px;
+  width: calc(100% - 30px);
+  margin: 0 auto;
+  text-align: center;
+}
+.sub01_nav .inner .title {
+  width: 100%;
+  height: 80px;
+  background-color: #F4F4F4;
+  line-height: 80px;
+}
+.sub01_nav .inner .title h4 {
+  font-weight: normal;
+}
+.sub01_nav .inner nav .gnb {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+}
+.sub01_nav .inner nav .gnb .depth01 > a {
+  font-family: var(--font-en);
+  font-size: 2.5rem;
+  line-height: 80px;
+}
+.sub01_nav .inner nav .gnb .depth01 .depth02 {
+  display: none;
+  font-size: 1.8rem;
+  font-family: var(--font-kr);
+  line-height: 80px;
+  position: absolute;
+  top: 80px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.sub01_nav .inner nav .gnb .depth01 .depth02.on {
+  display: flex;
+  justify-content: center;
+  gap: 60px;
+}
+.sub01_nav .inner nav .gnb .depth01 .depth02 li::after {
+  content: "";
+  width: 1px;
+  height: 20px;
+  background-color: #999999;
+  position: absolute;
+  top: 50%;
+  right: -30px;
+  transform: translateY(-50%);
+}
+.sub01_nav .inner nav .gnb .depth01 .depth02 li {
+  position: relative;
+}
+.sub01_nav .inner nav .gnb .depth01 .depth02 li:last-child::after {
+  display: none;
+}
+
+.sub01_page .inner {
+  max-width: 1440px;
+  width: calc(100% - 30px);
+  margin: 40px auto 100px;
+}
+.sub01_page .inner .list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  row-gap: 40px;
+}
+.sub01_page .inner .list .item {
+  width: 25%;
+}
+.sub01_page .inner .list .item figure {
+  height: 360px;
+}
+.sub01_page .inner .list .item figure img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.sub01_page .inner .list .item figure img + img {
+  opacity: 0;
+  transition: all 0.5s;
+  height: 0;
+  top: 100%;
+  transform: translateY(-100%);
+}
+.sub01_page .inner .list .item figure:hover img + img {
+  opacity: 1;
+  height: 100%;
+}
+.sub01_page .inner .list .item .info {
+  margin-top: 4rem;
+  text-align: center;
+}
+.sub01_page .inner .list .item .info h2 {
+  line-height: 25px;
+}
+.sub01_page .inner .list .item .info p {
+  margin-top: 2rem;
+  font-size: 2rem;
+  font-weight: bold;
+}
+.sub01_page .inner .list .item .info strong {
+  margin: 3rem 0;
+  display: block;
+  font-size: 1.8rem;
+  font-weight: normal;
+}
+.sub01_page .inner .list .item .info .btn {
+  display: flex;
+  justify-content: center;
+}
+.sub01_page .inner .list .item .info .btn a {
+  border: 1px #333 solid;
+  width: 170px;
+  height: 48px;
+  line-height: 48px;
+  display: block;
+  font-size: 1.5rem;
+  font-family: var(--font-en);
+}
+
+@media screen and (max-width: 1024px) {
+  .sub01_nav {
+    margin-top: 70px;
+  }
+}/*# sourceMappingURL=style.css.map */
