--- a/sub/css/style.scss
+++ b/sub/css/style.scss
@@ -45,15 +45,21 @@
         }
 
         nav {
+            position: relative;
+
             .gnb {
-                position: relative;
                 display: flex;
                 justify-content: center;
                 gap: 50px;
 
                 .depth01 {
+                    &.on {
+                        text-underline-offset : 10px;
+                        text-decoration: underline 2px #333;
+                    }
 
                     &>a {
+                        position: relative;
                         font-family: var(--font-en);
                         font-size: 2.5rem;
                         line-height: 80px;
@@ -66,13 +72,14 @@
                         line-height: 80px;
                         position: absolute;
                         top: 80px;
-                        left: 50%;
-                        transform: translateX(-50%);
+                        left: 0;
+                        width: 100%;
+
                         &.on {
                             display: flex;
                             justify-content: center;
                             gap: 60px;
-                            
+
                         }
 
                         li {
@@ -111,6 +118,7 @@
         max-width: 1440px;
         width: calc(100% - 30px);
         margin: 40px auto 100px;
+
         .list {
             display: flex;
             justify-content: center;
