--- a/sub01_category/css/style.scss
+++ b/sub01_category/css/style.scss
@@ -1,6 +1,6 @@
-@import url("/css/reset.css");
-@import url("/css/common.css");
-@import url("/css/common.scss");
+@import url("../../css/reset.css");
+@import url("../../css/common.css");
+@import url("../../css/common.scss");
 
 :root {
     --font-en: 'Caviar Dreams';
